fixing mobile spacing

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -158,33 +158,33 @@
       position: absolute;
       margin: 0px;
       top: 350px;
-      left: 400px;
+      left: 390px;
     }
 
     #spock-icon {
       position: absolute;
       margin: 0px;
       top: 350px;
-      left: 100px;
+      left: 90px;
     }
 
     #rock-icon {
       position: absolute;
       margin: 0px;
       top: 525px;
-      left: 350px;
+      left: 340px;
     }
 
     #lizard-icon {
       position: absolute;
       margin: 0px;
       top: 525px;
-      left: 150px;
+      left: 140px;
     }
 
-    // .icon-container {
-    //   height: 5rem;
-    //   width: 5rem;
+    .icon-container {
+      height: 5rem;
+      width: 5rem;
 
     //   &::before {
     //     height: 80%;
@@ -192,7 +192,7 @@
     //     top: -10px;
     //     right: -7px
     //   }
-    // }
+    }
   }
 
   #game-play-container {
